batching, reducing DEC list to 20 combinations

--- a/inst/shiny/DiagnosticsExplorer/html/chronograph.html
+++ b/inst/shiny/DiagnosticsExplorer/html/chronograph.html
@@ -1,9 +1,13 @@
 <h3>Description</h3>
-<p>A plot summarising and visualising the temporal association between the prescription of a drug (C1 target drug) and the occurrence of a medical event (C3 event). The graphical overview contrasts the observed and expected number of occurrences of the medical event in different time periods before the prescription of interest. The expected counts are based on a matched any drug prescription (C2 comparator drug). Each bar represent one month.</p>
+<p>A graphical overview of temporal patterns between drug use and event occurrence. The chronograph consists of two panes, one with information component (IC) values, the other with observed/expected counts from two-years preceding up until drug start (day 0) in 1-monthly intervals. Observed counts represent the number of events observed in the target drug cohort (C1); expected counts represent the number of expected events in the target drug cohort (i.e., computed based on the size of the target drug cohort (C1) and the frequency of event occurrence in the comparator drug cohort (C2)). Contrasts between observed and expected counts are represented by IC values, i.e., robust shrinkage observed-to-expected ratios with corresponding 95% credibility intervals. When the lower limit of the 95% credibility interval of the IC exceeds 1, the event is more frequently observed among target drug users than expected.</p>
 
 <h3>What to look for</h3>
 <ul>
-<li>What is the pattern of event occurance, and what is expected?</li>
-<li>Are the event occurance increasing already before prescription (day 0)? That can suggest that the event occurs around prescription due to other factors than as adverse reaction to the drug.</li>
+<li>What is the pattern of event occurrence and is this expected?</li>
+<li>Are IC values increased prior to drug start? This might be indicative of other factors (i.e., confounding by indication, protopathic bias) explaining the drug-event combination?</li>
 </ul>
+
+<h3>Note</h3>
+<p>None of the patterns displayed here imply causal associations and interpretations of IC values strongly depend on the composition of comparator drug cohort.</p>
+
 <p></p>
